--- a/styles.css
+++ b/styles.css
@@ -67,24 +67,24 @@ body {
     left: 10px;
     z-index: 1000; 
     max-height: 90%;
-    overflow-y: auto;
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
-
+    overflow: hidden; /* Remover overflow-y */
 }
-#listaEventos{
-   
+#listaEventos {
     width: auto;
-    max-height: 90%;
-    overflow-y: auto;
+    max-height: 70vh;
+    overflow-y: auto; /* Habilitar overflow-y */
     background: #FDF028; /* Amarelo */
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none;  /* Internet Explorer 10+ */
-    
 }
+
+#listaEventos::-webkit-scrollbar {
+    display: none; /* Safari and Chrome */
+}
+
 #toggleEventos {
     background-color: #FF8313; /* Laranja */
     color: white;
@@ -100,13 +100,11 @@ body {
 #eventos {
     width: 300px;
     max-height: 80%;
-    overflow-y: auto;
+    overflow: hidden; /* Remover overflow-y */
     background: #FDF028; /* Amarelo */
     padding: 10px;
     border-radius: 8px;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.2);
-    scrollbar-width: none; /* Firefox */
-    -ms-overflow-style: none;  /* Internet Explorer 10+ */
 }
 #eventos::-webkit-scrollbar {
     display: none; /* Safari and Chrome */
