--- a/styles.css
+++ b/styles.css
@@ -312,3 +312,14 @@ select:focus, input[type="date"]:focus, input[type="time"]:focus {
     border-color: #FF8313; /* Laranja */
     outline: none;
 }
+
+.agora {
+    display: inline-block;
+    background-color: #FF8313; /* Laranja */
+    color: white;
+    padding: 2px 6px;
+    border-radius: 3px;
+    font-size: 12px;
+    font-weight: bold;
+    margin-left: 10px;
+}
